tests/test_scope/bad/cyclic_scopes.catala_en
## Article

```catala
declaration scope A:
  b scope B
  context output x content integer

declaration scope B:
  a scope A
  context output y content integer

scope A:
  definition x equals b.y

scope B:
  definition y equals a.x
```
